force-app/main/default/objects/sm_Inventory_Item__c/sm_Inventory_Item__c.object-meta.xml
<CustomObject>
    <description>An item that is carried in inventory.  This is the item description.  The quantity (both onhand and ATP) is calculated from Inventory entries and orders.</description>
    <label>Inventory Item</label>
    <nameField>
        <label>Inventory Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>