force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Cost__c.field-meta.xml
<CustomField>
    <fullName>sm_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>