force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Expiration_Period__c.field-meta.xml
<CustomField>
    <fullName>sm_Expiration_Period__c</fullName>
    <description>The number of days before the item expires.</description>
    <inlineHelpText>Enter the number of days on average the Item lasts for.</inlineHelpText>
    <label>Expiration Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>