force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Is_Inventoriable__c.field-meta.xml
<CustomField>
    <fullName>sm_Is_Inventoriable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Inventoriable</label>
    <type>Checkbox</type>
</CustomField>