force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>sm_Item_Description__c</fullName>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>