force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>sm_Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sm_Item_Type</valueSetName>
    </valueSet>
</CustomField>