force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Item_Unit__c.field-meta.xml
<CustomField>
    <fullName>sm_Item_Unit__c</fullName>
    <label>Item Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sm_Item_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Item_Unit</valueSetName>
    </valueSet>
</CustomField>