force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sm_Max_Quantity__c</fullName>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>