force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Price__c.field-meta.xml
<CustomField>
    <fullName>sm_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>