force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Quantity_ATP_del__c.field-meta.xml
<CustomField>
    <fullName>sm_Quantity_ATP_del__c</fullName>
    <formula>sm_Quantity_Onhand__c -  sm_Quantity_Reserved_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity ATP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>