force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Quantity_Onhand__c.field-meta.xml
<CustomField>
    <fullName>sm_Quantity_Onhand__c</fullName>
    <label>Quantity Onhand</label>
    <summarizedField>Inventory__c.sm_Quantity__c</summarizedField>
    <summaryForeignKey>Inventory__c.sm_Inventory_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>