force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Quantity_Reserved__c.field-meta.xml
<CustomField>
    <fullName>sm_Quantity_Reserved__c</fullName>
    <label>Quantity Reserved</label>
    <summarizedField>Store_Order_Item__c.sm_Quantity__c</summarizedField>
    <summaryForeignKey>Store_Order_Item__c.sm_Inventory_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>