force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Store_Account__c.field-meta.xml
<CustomField>
    <fullName>sm_Store_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account that represents the store this item is associated with.</description>
    <label>Store Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Items</relationshipLabel>
    <relationshipName>Inventory_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>