force-app/main/default/objects/sm_Inventory_Item__c/fields/sm_Vendor__c.field-meta.xml
<CustomField>
    <fullName>sm_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Store Manager Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory Items (Account)</relationshipLabel>
    <relationshipName>Vendor_Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>