force-app/main/default/objects/sm_Inventory_Item__c/recordTypes/MILK.recordType-meta.xml
<RecordType>
    <fullName>MILK</fullName>
    <active>false</active>
    <label>MILK</label>
</RecordType>