force-app/main/default/objects/sm_Inventory_Item__c/listViews/Inventory_Item_List.listView-meta.xml
<ListView>
    <fullName>Inventory_Item_List</fullName>
    <columns>NAME</columns>
    <columns>sm_Item_Type__c</columns>
    <columns>sm_Item_Unit__c</columns>
    <columns>sm_Cost__c</columns>
    <columns>sm_Price__c</columns>
    <filterScope>Mine</filterScope>
    <label>Inventory Item List</label>
</ListView>